# nexus-code

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: approval.rs  history.rs  lib.rs  react.rs  session.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  commands.rs  main.rs  output.rs  prompt.rs
crates/cli/tests/: smoke.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs  model.rs  wizard.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  lib.rs  server.rs
crates/provider/: Cargo.toml
crates/provider/src/: client.rs  lib.rs  models.rs  types.rs
crates/tools/: Cargo.toml
crates/tools/src/: files.rs  git.rs  lib.rs  search.rs  shell.rs  vision.rs  web.rs
docs/superpowers/plans/: 2026-05-04-nexus-code.md  2026-05-05-nexus-code-macos-app.md
docs/superpowers/specs/: 2026-05-04-nexus-code-design.md  2026-05-05-nexus-code-macos-design.md
