[workspace]
members  = ["crates/cli","crates/agent","crates/tools","crates/mcp","crates/provider","crates/config"]
resolver = "2"

[workspace.dependencies]
tokio        = { version = "1",    features = ["full"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
reqwest      = { version = "0.12", features = ["json", "stream"] }
clap         = { version = "4",    features = ["derive"] }
reedline     = "0.35"
crossterm    = "0.27"
ignore       = "0.4"
similar      = { version = "2", features = ["text"] }
git2         = "0.19"
directories  = "5"
async-trait  = "0.1"
anyhow       = "1"
thiserror    = "2"
base64       = "0.22"
futures-util = "0.3"
glob         = "0.3"
urlencoding  = "2"
# dev
wiremock     = "0.6"
tempfile     = "3"
assert_cmd   = "2"
