[package]
name    = "nxc-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
temp-env = "0.1"
